--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url("../asset/images/background.png");
+  background-image: url("../asset/images/background.jpg");
   background-repeat: repeat;
 }
 
