--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url("../asset/images/background3.png");
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.88), rgba(0, 0, 0, 0.88)), url("../assets/images/background.png");
   background-repeat: repeat;
 }
 
